[package]
name = "place-route-ui"
version = "0.1.0"
authors = ["John Skottis <giannis.sc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
druid = { git = "https://github.com/linebender/druid.git", version = "0.7", features = ["im"]}
